# Elio-SmartProceses

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt  vercel.json
api/: index.py
apps/action-runner/: pyproject.toml
apps/action-runner/app/: __init__.py  main.py
apps/action-runner/elio_action_runner.egg-info/: PKG-INFO  SOURCES.txt
apps/analytics/: pyproject.toml
apps/analytics/app/: main.py
apps/analytics/app/services/: anomaly.py  features.py  prediction.py
apps/analytics/elio_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api-gateway/: pyproject.toml
apps/api-gateway/app/: main.py  simulator.py  ws_manager.py
apps/api-gateway/app/agents/: pipeline.py
apps/api-gateway/app/routers/: actions.py  anomalies.py  demo.py  ingestion.py  machines.py  predictions.py
apps/api-gateway/app/services/: store.py
apps/api-gateway/elio_api_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/dashboard/: package-lock.json  package.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/orchestrator/: pyproject.toml
apps/orchestrator/app/: main.py
apps/orchestrator/app/services/: agent_pipeline.py  agents.py  protocol.py
apps/orchestrator/elio_orchestrator.egg-info/: PKG-INFO  SOURCES.txt
docs/: USER_MANUAL.md  agent-protocol.md  architecture.md  database.md  schema.sql
